--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/application-traffic-recognition.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/application-traffic-recognition.j2
@@ -23,9 +23,9 @@
 {%                 set tcp_dest_port = application.tcp_dest_port_set_name | arista.avd.default("-") %}
 {%                 set udp_src_port = application.udp_src_port_set_name | arista.avd.default("-") %}
 {%                 set udp_dest_port = application.udp_dest_port_set_name | arista.avd.default("-") %}
-{%                 set protocol_ranges = ", ".join(application.protocol_ranges | arista.avd.default(["-"])) %}
-{%                 set protocol = ", ".join(application.protocols | arista.avd.default(["-"])) %}
-{%                 set dscp_ranges = " ".join(application.dscp_ranges | arista.avd.default(["-"])) %}
+{%                 set protocol_ranges = application.protocol_ranges | arista.avd.default(["-"]) | join(", ") %}
+{%                 set protocol = application.protocols | arista.avd.default(["-"]) | join(", ") %}
+{%                 set dscp_ranges = application.dscp_ranges | arista.avd.default(["-"]) | join(" ") %}
 | {{ application.name }} | {{ src_prefix }} | {{ dest_prefix }} | {{ protocol }} | {{ protocol_ranges }} | {{ tcp_src_port }} | {{ tcp_dest_port }} | {{ udp_src_port }} | {{ udp_dest_port }} | {{ dscp_ranges }} |
 {%             endfor %}
 {%         endif %}
@@ -40,8 +40,8 @@
 {%                 set tcp_dest_port = application.tcp_dest_port_set_name | arista.avd.default("-") %}
 {%                 set udp_src_port = application.udp_src_port_set_name | arista.avd.default("-") %}
 {%                 set udp_dest_port = application.udp_dest_port_set_name | arista.avd.default("-") %}
-{%                 set protocol_ranges = ", ".join(application.protocol_ranges | arista.avd.default(["-"])) %}
-{%                 set protocol = ", ".join(application.protocols | arista.avd.default(["-"])) %}
+{%                 set protocol_ranges = application.protocol_ranges | arista.avd.default(["-"]) | join(", ") %}
+{%                 set protocol = application.protocols | arista.avd.default(["-"]) | join(", ") %}
 | {{ application.name }} | {{ protocol }} | {{ protocol_ranges }} | {{ tcp_src_port }} | {{ tcp_dest_port }} | {{ udp_src_port }} | {{ udp_dest_port }} |
 {%             endfor %}
 {%         endif %}
