--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/sync-e.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/sync-e.j2
@@ -4,7 +4,7 @@
  that can be found in the LICENSE file.
 #}
 {# doc - sync-e #}
-{% if sync_e is arista.avd.defined and sync_e.network_option is arista.avd.defined %}
+{% if sync_e.network_option is arista.avd.defined %}
 
 ### Synchronous Ethernet (SyncE) Settings
 
