--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -864,7 +864,7 @@ interface {{ ethernet_interface.name }}
 {%             endfor %}
 {%         endfor %}
 {%     endif %}
-{%     if ethernet_interface.sync_e is arista.avd.defined and ethernet_interface.sync_e.enable is arista.avd.defined(true) %}
+{%     if ethernet_interface.sync_e.enable is arista.avd.defined(true) %}
    sync-e
       priority {{ ethernet_interface.sync_e.priority | arista.avd.default(127) }}
 {%     endif %}
