Feat(eos_cli_config_gen): Add ptp profiles for ITU-T G8275 support (#4230)

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ptp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/ptp.j2
@@ -7,7 +7,11 @@
 {% if ptp is arista.avd.defined %}
 
 ### PTP
+{%     if ptp.profile is arista.avd.defined %}
 
+PTP Profile: {{ ptp.profile }}
+
+{%     endif %}
 #### PTP Summary
 
 | Clock ID | Source IP | Priority 1 | Priority 2 | TTL | Domain | Mode | Forward Unicast |
