--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -703,6 +703,9 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.ptp.delay_req is arista.avd.defined %}
    ptp delay-req interval {{ ethernet_interface.ptp.delay_req }}
 {%     endif %}
+{%     if ethernet_interface.ptp.profile.g8275_1.destination_mac_address is arista.avd.defined %}
+   ptp profile g8275.1 destination mac-address {{ ethernet_interface.ptp.profile.g8275_1.destination_mac_address }}
+{%     endif %}
 {%     if ethernet_interface.ptp.role is arista.avd.defined %}
    ptp role {{ ethernet_interface.ptp.role }}
 {%     endif %}
