--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -160,6 +160,84 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.pvlan_mapping is arista.avd.defined %}
    switchport pvlan mapping {{ ethernet_interface.pvlan_mapping }}
 {%     endif %}
+{%     if ethernet_interface.encapsulation_dot1q.vlan is arista.avd.defined %}
+{%         set encapsulation_dot1q_cli = 'encapsulation dot1q vlan ' ~ ethernet_interface.encapsulation_dot1q.vlan %}
+{%         if ethernet_interface.encapsulation_dot1q.inner_vlan is arista.avd.defined %}
+{%             set encapsulation_dot1q_cli = encapsulation_dot1q_cli ~ ' inner ' ~ ethernet_interface.encapsulation_dot1q.inner_vlan %}
+{%         endif %}
+   {{ encapsulation_dot1q_cli }}
+{%     elif ethernet_interface.encapsulation_vlan.client.dot1q.vlan is arista.avd.defined %}
+{%         set encapsulation_cli = "client dot1q " ~ ethernet_interface.encapsulation_vlan.client.dot1q.vlan %}
+{%         if ethernet_interface.encapsulation_vlan.network.dot1q.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q " ~ ethernet_interface.encapsulation_vlan.network.dot1q.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1q.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q outer " ~ ethernet_interface.encapsulation_vlan.network.dot1q.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1q.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1ad.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad outer " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.client is arista.avd.defined(true) %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network client" %}
+{%         endif %}
+{%     elif ethernet_interface.encapsulation_vlan.client.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.client.dot1q.outer is arista.avd.defined %}
+{%         set encapsulation_cli = "client dot1q outer " ~ ethernet_interface.encapsulation_vlan.client.dot1q.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.client.dot1q.inner %}
+{%         if ethernet_interface.encapsulation_vlan.network.dot1q.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q " ~ ethernet_interface.encapsulation_vlan.network.dot1q.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1q.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q outer " ~ ethernet_interface.encapsulation_vlan.network.dot1q.inner ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1q.outer %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1ad.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad outer " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.client is arista.avd.defined(true) %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network client" %}
+{%         endif %}
+{%     elif ethernet_interface.encapsulation_vlan.client.dot1ad.vlan is arista.avd.defined %}
+{%         set encapsulation_cli = "client dot1ad " ~ ethernet_interface.encapsulation_vlan.client.dot1ad.vlan %}
+{%         if ethernet_interface.encapsulation_vlan.network.dot1q.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q " ~ ethernet_interface.encapsulation_vlan.network.dot1q.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1q.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q outer " ~ ethernet_interface.encapsulation_vlan.network.dot1q.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1q.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1ad.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad outer " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.client is arista.avd.defined(true) %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network client" %}
+{%         endif %}
+{%     elif ethernet_interface.encapsulation_vlan.client.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.client.dot1ad.outer is arista.avd.defined %}
+{%         set encapsulation_cli = "client dot1ad outer " ~ ethernet_interface.encapsulation_vlan.client.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.client.dot1ad.inner %}
+{%         if ethernet_interface.encapsulation_vlan.network.dot1q.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q " ~ ethernet_interface.encapsulation_vlan.network.dot1q.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1q.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q outer " ~ ethernet_interface.encapsulation_vlan.network.dot1q.inner ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1q.outer %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1ad.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad outer " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.client is arista.avd.defined(true) %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network client" %}
+{%         endif %}
+{%     elif ethernet_interface.encapsulation_vlan.client.untagged is arista.avd.defined(true) %}
+{%         set encapsulation_cli = "client untagged" %}
+{%         if ethernet_interface.encapsulation_vlan.network.dot1q.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q " ~ ethernet_interface.encapsulation_vlan.network.dot1q.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1q.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1q.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1q outer " ~ ethernet_interface.encapsulation_vlan.network.dot1q.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1q.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.vlan is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.vlan %}
+{%         elif ethernet_interface.encapsulation_vlan.network.dot1ad.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.dot1ad.outer is arista.avd.defined %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network dot1ad outer " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.outer ~ " inner " ~ ethernet_interface.encapsulation_vlan.network.dot1ad.inner %}
+{%         elif ethernet_interface.encapsulation_vlan.network.untagged is arista.avd.defined(true) %}
+{%             set encapsulation_cli = encapsulation_cli ~ " network untagged" %}
+{%         endif %}
+{%     elif ethernet_interface.encapsulation_vlan.client.unmatched is arista.avd.defined(true) %}
+{%         set encapsulation_cli = "client unmatched" %}
+{%     endif %}
+{%     if encapsulation_cli is arista.avd.defined %}
+   encapsulation vlan
+      {{ encapsulation_cli }}
+{%     endif %}
 {%     if ethernet_interface.switchport.access_vlan is arista.avd.defined %}
    switchport access vlan {{ ethernet_interface.switchport.access_vlan }}
 {%     endif %}
