--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/router-bgp.j2
@@ -624,6 +624,46 @@ ASN Notation: {{ router_bgp.as_notation | arista.avd.default('asplain') }}
 | L3 Gateway Inter-domain | True |
 {%         endif %}
 {%     endif %}
+{%     if router.bgp.address_family_ipv4_labeled_unicast is arista.avd.defined %}
+
+#### Router BGP IPv4 Labeled Unicast
+
+##### General Settings
+
+| Settings | Value |
+| -------- | ----- |
+{%         if router_bgp.address_family_ipv4_labeled_unicast.update_wait_for_convergence is arista.avd.defined(true) %}
+| Update - wait-for-convergence | Enabled |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.bgp.next_hop_unchanged is arista.avd.defined(true) %}
+| Next-hop Unchanged | True |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.lfib_entry_installation_skipped is arista.avd.defined(true) %}
+| lfib entry installation skipped | True |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.label_local_termination is arista.avd.defined %}
+| label local-termination | {{ router_bgp.address_family_ipv4_labeled_unicast.label_local_termination }} |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.graceful_restart is arista.avd.defined(true) %}
+| graceful-restart | Enabled |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.neighbor_default.next_hop_self is arista.avd.defined(true) %}
+| neighbor default next-hop-self | True |
+{%         endif %}
+{%         if router_bgp.address_family_ipv4_labeled_unicast.neighbors is arista.avd.defined %}
+##### IPv4 BGP-LU Neighbors
+
+| Neighbor | Activate | Route-map In | Route-map Out | RCF In | RCF Out |
+| -------- | -------- | ------------ | ------------- | ------ | ------- |
+{%             for neighbor in router_bgp.address_family_ipv4_labeled_unicast.neighbors | arista.avd.natural_sort('ip_address') %}
+{%                 set route_map_in = neighbor.route_map_in | arista.avd.default("-") %}
+{%                 set route_map_out = neighbor.route_map_out | arista.avd.default("-") %}
+{%                 set rcf_in = neighbor.rcf_in | arista.avd.default("-") %}
+{%                 set rcf_out = neighbor.rcf_out | arista.avd.default("-") %}
+| {{ neighbor.ip_address }} | {{ neighbor.activate | arista.avd.default(false) }} | {{ route_map_in }} | {{ route_map_out }} | {{ rcf_in }} | {{ rcf_out }} |
+{%             endfor %}
+{%         endif %}
+{%     endif %}
 {%     if router_bgp.address_family_ipv4_sr_te is arista.avd.defined %}
 
 #### Router BGP IPv4 SR-TE Address Family
