--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -726,7 +726,7 @@ router bgp {{ router_bgp.as }}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
 {%             if neighbor.additional_paths.send is arista.avd.defined %}
-{%                 set evpn_neighbor_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send ' ~ neighbor.additional_paths.send %}
+{%                 set evpn_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send ' ~ neighbor.additional_paths.send %}
 {%                 if neighbor.additional_paths.send == 'disabled' %}
 {%                     set evpn_neighbor_add_path = 'no neighbor ' ~ neighbor.ip_address ~ ' additional-paths send any' %}
 {%                 elif neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
@@ -854,6 +854,23 @@ router bgp {{ router_bgp.as }}
 {%     if router_bgp.address_family_ipv4 is arista.avd.defined %}
    !
    address-family ipv4
+{%         if router_bgp.address_family_ipv4.bgp.additional_paths.receive is arista.avd.defined(true) %}
+      bgp additional-paths receive
+{%         endif %}
+{%         if router_bgp.address_family_ipv4.bgp.additional_paths.install is arista.avd.defined(true) %}
+      bgp additional-paths install
+{%         elif router_bgp.address_family_ipv4.bgp.additional_paths.install_ecmp_primary is arista.avd.defined(true) %}
+      bgp additional-paths install ecmp-primary
+{%         endif %}
+{%         if router_bgp.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
+{%             set ipv4_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv4.bgp.additional_paths.send %}
+{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'ecmp' %}
+{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
+{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'limit' %}
+{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_limit %}
+{%             endif %}
+      {{ ipv4_bgp_add_path }}
+{%         endif %}
 {%         for peer_group in router_bgp.address_family_ipv4.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
@@ -909,6 +926,9 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
+      neighbor {{ neighbor.ip_address }} additional-paths receive
+{%             endif %}
 {%             if neighbor.additional_paths.send is arista.avd.defined %}
 {%                 set ipv4_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-path send ' ~  neighbor.additional_paths.send %}
 {%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
@@ -963,15 +983,6 @@ router bgp {{ router_bgp.as }}
       bgp redistribute-internal
 {%         elif router_bgp.address_family_ipv4.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
-{%         endif %}
-{%         if router_bgp.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
-{%             set ipv4_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv4.bgp.additional_paths.send %}
-{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'ecmp' %}
-{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
-{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv4.bgp.additional_paths.send == 'limit' %}
-{%                 set ipv4_bgp_add_path = ipv4_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv4.bgp.additional_paths.send_limit %}
-{%             endif %}
-      {{ ipv4_bgp_add_path }}
 {%         endif %}
 {%         for redistribute_route in router_bgp.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
@@ -1088,6 +1099,23 @@ router bgp {{ router_bgp.as }}
 {%     if router_bgp.address_family_ipv6 is arista.avd.defined %}
    !
    address-family ipv6
+{%         if router_bgp.address_family_ipv6.bgp.additional_paths.receive is arista.avd.defined(true) %}
+      bgp additional-paths receive
+{%         endif %}
+{%         if router_bgp.address_family_ipv6.bgp.additional_paths.install is arista.avd.defined(true) %}
+      bgp additional-paths install
+{%         elif router_bgp.address_family_ipv6.bgp.additional_paths.install_ecmp_primary is arista.avd.defined(true) %}
+      bgp additional-paths install ecmp-primary
+{%         endif %}
+{%         if router_bgp.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
+{%             set ipv6_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv6.bgp.additional_paths.send %}
+{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'ecmp' %}
+{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
+{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
+{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_limit %}
+{%             endif %}
+      {{ ipv6_bgp_add_path }}
+{%         endif %}
 {%         for peer_group in router_bgp.address_family_ipv6.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
@@ -1170,20 +1198,6 @@ router bgp {{ router_bgp.as }}
       bgp redistribute-internal
 {%         elif router_bgp.address_family_ipv6.bgp.redistribute_internal is arista.avd.defined(false) %}
       no bgp redistribute-internal
-{%         endif %}
-{%         if router_bgp.address_family_ipv6.bgp.additional_paths.install is arista.avd.defined(true) %}
-      bgp additional-paths install
-{%         elif router_bgp.address_family_ipv6.bgp.additional_paths.install_ecmp_primary is arista.avd.defined(true) %}
-      bgp additional-paths install ecmp-primary
-{%         endif %}
-{%         if router_bgp.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
-{%             set ipv6_bgp_add_path = 'bgp additional-path send ' ~  router_bgp.address_family_ipv6.bgp.additional_paths.send %}
-{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'ecmp' %}
-{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' limit ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
-{%             elif neighbor.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
-{%                 set ipv6_bgp_add_path = ipv6_bgp_add_path ~ ' ' ~ router_bgp.address_family_ipv6.bgp.additional_paths.send_limit %}
-{%             endif %}
-      {{ ipv6_bgp_add_path }}
 {%         endif %}
 {%         for redistribute_route in router_bgp.address_family_ipv6.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
